--- a/2024-06-06.md
+++ b/2024-06-06.md
@@ -9,4 +9,5 @@ To Do:
 - ~~Cat Food~~
 - ~~Order Xerox Scanner for NFLD~~
 - Bill of Sales for Boat Insurance
-- 
+
+Well this turned out to be a great day. The Car did not pass inspection so there needs to be some work done on the brakes, and according Woodstock Toyota, the tires need to be swapped out. This is after they told me a month ago that these tires would last the season. 
