--- a/2024-06-07.md
+++ b/2024-06-07.md
@@ -2,8 +2,7 @@
 - Boat License 
 - Ask about the best Flower hooks for the Porch pillars
 - Bill of Sales for Boat Insurance
-- New Day
-- 
+
 
 There are many excellent free and open-source speech-to-text (STT) software options available. Here
 are some popular ones:
@@ -46,4 +45,8 @@ noise?
 transcription?
 
 I hope this helps you find the perfect open-source or free STT software for your needs!
+
+I found a new website today:
+https://docs.openwebui.com/ - well old website, I knew that thsi existed, but I never really loked into this.
+
 
