--- a/Journal/2024-06-07.md
+++ b/Journal/2024-06-07.md
@@ -48,5 +48,7 @@ I hope this helps you find the perfect open-source or free STT software for your
 
 I found a new website today:
 https://docs.openwebui.com/ - well old website, I knew that thsi existed, but I never really loked into this.
+[[2024-06-06]]
 
 
+#ai #opensource 
